@@ -32,6 +32,8 @@ public:
 
   /// \return whether partial charges were successfully assigned to this molecule
   bool ComputeCharges(OBMol &mol);
+
+  double DipoleScalingFactor() { return 3.490; } // fit from regression
 };
 
 /////////////////////////////////////////////////////////////////
