@@ -54,6 +54,8 @@ public:
   /// \return whether partial charges were successfully assigned to this molecule
   bool ComputeCharges(OBMol &mol);
 
+  double DipoleScalingFactor() { return 2.042; } // fit from regression
+
 private:
   Vector3d GetParameters(unsigned int Z, int Q);
   bool solver(MatrixXd A,VectorXd b, VectorXd &x, const double NormThreshold = 1.e-6);
